# mcp-invocado

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
mcp/: cli.py
mcp/core/: checker.py  normalizer.py  parser.py  pipeline.py  renderer.py  translator.py
mcp/templates/generic/: report.md
mcp/templates/oswe/: offsec.latex  report.md
mcp/utils/: checks.py
